--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #262626;
+  --foreground: #262626;
 }
+
 
 @media (prefers-color-scheme: dark) {
   :root {
@@ -12,8 +14,11 @@
 
 html,
 body {
+  font-family: 'Inter', sans-serif;
   max-width: 100vw;
   overflow-x: hidden;
+  margin: 0px !important;
+  background-color: #262626;
 }
 
 body {
@@ -40,3 +45,5 @@ a {
     color-scheme: dark;
   }
 }
+
+
